--- a/attorney-list.html
+++ b/attorney-list.html
@@ -33,7 +33,7 @@
     <div class="navbar-header">
       <button class="navbar-toggle" data-toggle="collapse" data-target=".navbar-collapse"> <span class="icon icon-bar"></span> <span class="icon icon-bar"></span> <span class="icon icon-bar"></span> </button>
       <!-- lOGO TEXT HERE --> 
-      <a href="index.html" class="navbar-brand"><img src="images/logo-color.png" alt="" /></a> </div>
+      <a href="index.html" class="navbar-brand"><img src="https://radiantsoftbd.github.io/eCommerce6/images/logo1.jpg" alt="" /></a> </div>
     
     <!-- NAVIGATION LINKS -->
     <div class="collapse navbar-collapse">
@@ -209,7 +209,7 @@
       <div class="row">
         <div class="col-xs-12 col-sm-6 col-md-3">
           <div class="footer-lwf">
-            <h3 class="footer-logo"><img src="images/logo.png" alt="Lawyer & Attorney"></h3>
+            <h3 class="footer-logo"><img src="https://radiantsoftbd.github.io/eCommerce6/images/logo1.jpg" alt="Lawyer & Attorney"></h3>
             <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Fusce aliquet, massa ac ornare feugiat, nunc dui auctor ipsum, sed posuere eros sapien id quam. </p>
             <ul class="footer-contact">
               <li><i class="fa fa-phone"></i> 01685855706</li>
